# MURAL

./: .gitignore  LICENSE  README.md  setup.py
docker/: Dockerfile  Dockerfile.x86  docker_commands.txt
pcdet/: config.py
pcdet/datasets/augmentor/: database_sampler.py
pcdet/datasets/nuscenes/: nuscenes_dataset.py  nuscenes_utils.py
pcdet/datasets/processor/: data_processor.py
pcdet/datasets/waymo/: waymo_dataset.py
pcdet/models/backbones_2d/: __init__.py  base_bev_backbone.py  base_bev_backbone_sliced.py
pcdet/models/backbones_3d/: __init__.py  dsvt_input_layer.py  dsvt_onnxruntime.py  spconv_backbone.py  spconv_backbone_2d.py
pcdet/models/dense_heads/: __init__.py  center_head.py  center_head_inf.py  transfusion_head.py  voxelnext_head.py
pcdet/models/detectors/: __init__.py  anytime_calibrator.py  anytime_template_v1.py  anytime_template_v2.py  centerpoint.py  centerpoint_opt.py  centerpoint_valo.py  detector3d_template.py  dsvt_centerhead_opt.py  dsvt_centerhead_valo.py  forecaster.py  mural.py  mural_calibrator.py  mural_utils.py  pillarnet_opt.py  pillarnet_valo.py  sched_helpers.py  transfusion.py  transfusion_anytime.py  voxelnext.py  voxelnext_anytime.py
pcdet/models/model_utils/: centernet_utils.py  dsvt_utils.py  model_nms_utils.py
pcdet/ops/: utils.py
pcdet/ops/cuda_slicer/: cuda_slicer_utils.py
pcdet/ops/iou3d_nms/: iou3d_nms_utils.py
pcdet/ops/ioubev_nms/: ioubev_nms_utils.py
pcdet/trt_plugins/slice_and_batch_nhwc/: CMakeLists.txt
pcdet/trt_plugins/slice_and_batch_nhwc/src/: main.cpp  sliceAndBatchKernel.cu  sliceAndBatchKernel.h  sliceAndBatchPlugin.cpp  sliceAndBatchPlugin.h
pcdet/utils/: common_utils.py  res_pred_utils.py  ros2_utils.py  vsize_calc.py
req_patches/: cumm.patch
tools/: do_calib.sh  do_run_tests.sh  eval_from_files.py  initialize.sh  log_plotter.py  nusc_dataset_prep.sh  nusc_dataset_utils.py  nusc_sh_utils.sh  plot_utils.py  run_tests.sh
tools/deploy_files/: build_dense_convs.sh  build_dense_convs_dyn.sh  build_dsvt.sh
tools/eval_utils/: eval_utils.py  gen_frames_meta.py
tools/scripts/: train_respred_mdl.py
tools/train_utils/: train_utils.py
tools/visual_utils/: bev_visualizer.py  ros2_republisher.py
tools/voxel_size_calculator/: calc_voxel_sizes.c  compile_and_run.sh
(+52 files in other folders)
